<resources>
    <string name="app_name">Marketz</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="email_address_link">Email Address</string>
    <string name="password_link">Password</string>
    <string name="confirm_password_link">Confirm Password</string>
    <string name="login_link">login</string>

    <!--    activity_register-->
    <string name="register">Register</string>
    
    <!--category    -->
    <string-array name="Category">
        <item> Choose Category </item>
        <item> Property </item>
        <item> Food </item>
        <item> Electronics </item>
        <item> Vehicles </item>
        <item> Appliance </item>
        <item> Beauty </item>
        <item> Business Center </item>
    </string-array>

    <!--    ResetPasswordDialog-->
    <string name="reset_password"> Reset password</string>
    <string name="email">Email address </string>
    <string name="confirm">Confirm</string>
    <string name="upload_image">Upload Image</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="post_ad">Post Ad</string>
    <string name="change_profile_link">Change profile</string>
    <string name="change_email_address">Email address</string>
    <string name="full_name_link">Full name</string>
    <string name="address_link">Address</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_category">Category</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="product_description_link">Product Description</string>
    <string name="product_price_link">Product Price</string>
    <string name="all_services">All Services</string>
    <string name="post_your_ad">Post your Ad</string>
    <string name="business_center">Business Center</string>
    <string name="appliances">Appliances</string>
    <string name="electronics">Electronics</string>
    <string name="cars">Cars</string>
    <string name="services">Services</string>
    <string name="property">Property</string>
    <string name="food">Food</string>
    <string name="beauty">Beauty</string>
    <string name="product_review_community">Product Review Community</string>
</resources>