<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">



    <ImageView
        android:id="@+id/upload_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/image" />

    <Button
        android:id="@+id/upload_image_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/buttons"
        android:text="@string/upload_image" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/description"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="350dp"
        android:autofillHints="Category"
        />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_design"
        android:hint="@string/amount"
        android:textAlignment="center" />


    <Button
        android:id="@+id/post_ad_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/buttons"
        android:text="@string/post_ad"
        android:textAlignment="center"/>

    <ProgressBar
        android:id="@+id/uploadProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="253dp"
        android:visibility="invisible" />
</RelativeLayout>


