<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:src="@drawable/marketz_logo" />

            <EditText
                android:id="@+id/emailEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/input_design"
                android:ems="10"
                android:hint="@string/email_address_link"
                android:inputType="textEmailAddress"
                android:padding="20dp" />
            <EditText
                android:id="@+id/passwordEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_design"
                android:ems="10"
                android:hint="@string/password_link"
                android:inputType="textPassword"
                android:padding="20dp" />
            <EditText
                android:id="@+id/passwordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_design"
                android:ems="10"
                android:hint="@string/confirm_password_link"
                android:inputType="textPassword"
                android:padding="20dp" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttons"
                android:padding="20dp"
                android:text="@string/register"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/register_progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="253dp"
        android:visibility="invisible"/>


</RelativeLayout>